package es.ull.patrones.weather;

public class Cloud {

    int all;

    public Cloud(int all) {
        setAll(all);
    }

    public void setAll(int all) {
        this.all = all;
    }

    public int getAll() {
        return all;
    }

}
