@startuml

title __P7_OBSERVER's Class Diagram__\n

  namespace es.ull.patrones {
    class Main {
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.api {
      class es.ull.patrones.api.ParseJSON {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.api {
      class es.ull.patrones.api.WeatherAPI {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.app {
      class es.ull.patrones.app.App {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.MainFrame {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.SecondFrame {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.gui {
      class es.ull.patrones.gui.Thermometer {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      class es.ull.patrones.pattern.ConcreteListener {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      interface es.ull.patrones.pattern.EventListener {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      class es.ull.patrones.pattern.EventManager {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.pattern {
      class es.ull.patrones.pattern.WeatherData {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.weather {
      class es.ull.patrones.weather.Cloud {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.weather {
      class es.ull.patrones.weather.Coordinate {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.weather {
      class es.ull.patrones.weather.MainW {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.weather {
      class es.ull.patrones.weather.SystemW {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.weather {
      class es.ull.patrones.weather.Weather {
      }
    }
  }
  

  namespace es.ull.patrones {
    namespace es.ull.patrones.weather {
      class es.ull.patrones.weather.Wind {
      }
    }
  }
  

  es.ull.patrones.api.ParseJSON o-- es.ull.patrones.pattern.WeatherData : weatherData
  es.ull.patrones.gui.MainFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.SecondFrame -up-|> javax.swing.JFrame
  es.ull.patrones.gui.SecondFrame o-- es.ull.patrones.pattern.EventManager : manager
  es.ull.patrones.pattern.ConcreteListener .up.|> es.ull.patrones.pattern.EventListener
  es.ull.patrones.pattern.EventManager o-- es.ull.patrones.pattern.WeatherData : weatherData
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Cloud : clouds
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Coordinate : coordinate
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.MainW : main
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.SystemW : sys
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Weather : weather
  es.ull.patrones.pattern.WeatherData o-- es.ull.patrones.weather.Wind : wind


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
